Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50601

qdoc: qdocconf: Does not check whether sourcedirs/files exist

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.0 RC
    • 5.6.0 Beta
    • Build tools: qdoc
    • None

    Description

      If you pass a directory name that doesn't exist to sourcedirs in .qdocconf:

      sourcedirs += doesnotexist
      

      Expected: Warning message about missing directory.

      Actual: The current location (directory for the .qdocconf) is added to sourcedirs. No warnings generated.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes