qdoc: Warn about non-existing sourcedirs and headerdirs

Enable warnings for source and header directories. This will also
prevent adding an empty string into the list of resolved directories,
which often results in unexpected behavior.

Change-Id: I81d508b5cc8cf2bd033e712b575c1cca63d779ce
Task-number: QTBUG-50601
Reviewed-by: Martin Smith <martin.smith@theqtcompany.com>